tests/snapshots/serde__display_biguint64array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array([1n])"
---
new BigUint64Array([
  0x01n,
])
