tests/snapshots/serde__display_biguint64array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array(new ArrayBuffer(8, { maxByteLength: 16 }))"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 16 });
new BigUint64Array(v0)
