tests/snapshots/serde__display_biguint64array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array(new ArrayBuffer(16, { maxByteLength: 24 })).subarray(0, 1)"
---
const v0 = new ArrayBuffer(16, { maxByteLength: 24 });
new BigUint64Array(v0, 0, 1)
