tests/snapshots/serde__display_biguint64array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array([1n, 2n]).subarray(1, 2)"
---
new BigUint64Array([
  0x01n, 0x02n,
]).subarray(1, 2)
