tests/snapshots/serde__display_biguint64array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array(1)"
---
new BigUint64Array(1)
