tests/snapshots/serde__display_biguint64array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigUint64Array([0n, 0n, 0n])"
---
new BigUint64Array(3)
