tests/snapshots/serde__display_boolean_primitive_false.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Boolean(false)"
---
new Boolean(false)
