tests/snapshots/serde__display_dataview_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new ArrayBuffer(0))"
---
new DataView(new ArrayBuffer())
