tests/snapshots/serde__display_dataview_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew DataView(new Uint8Array([1]).buffer)"
---
new DataView(new Uint8Array([
  0x01,
]).buffer)
